--- a/views/add-product.html
+++ b/views/add-product.html
@@ -99,7 +99,7 @@
                 <input type="text" name="title" id="title">
                
             </div>
-            <button type="submit">Add Product</button>
+            <button type="submit">Add Product here</button>
         </form>
     </main>
 </body>
